Fixed gap on info-nav

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -213,7 +213,11 @@ a {
   justify-content: center;
   align-items: flex-start;
   padding-top: 16px;
-  gap: 20px;
+}
+
+.info-nav > * {
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 .padding-top-6px {
@@ -302,13 +306,21 @@ a {
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-    gap: 5px;
+  }
+
+  .info-nav > * {
+    margin-left: 3px;
+    margin-right: 3px;
   }
 
   .in-row {
     flex-direction: row;
     justify-content: center;
-    gap: 20px;
+  }
+
+  .info-nav.in-row > * {
+    margin-left: 10px;
+    margin-right: 10px;
   }
 }
 
